# Macro-Factor-Pricing-Engine

./: .env.example  .gitignore  Notes  README.md  pyproject.toml
docs/: PROJECT_DOCUMENTATION.md  market_history_patterns.md
frontend/: app.js  index.html  styles.css
src/macro_factor_pricing_engine/: TreasuryPolicy.md  __init__.py  api.py  api_keys.py  app.py  benchmarks.py  explain.py  ig.py  inventory.py  policy.py  rates_scorer.py  regime_input.py  regimes.py  risk.py  sizing.py  trading212.py  treasury_policy.py  universe.py
src/macro_factor_pricing_engine/data/: __init__.py  snapshot_2026_06_18.json  sources.py
tests/: test_api_phase1.py  test_benchmarks.py  test_ig.py  test_policy_and_regimes.py  test_trading212.py
