[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-factor-pricing-engine"
version = "0.1.0"
description = "Retail-accessible macro regime and allocation policy engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
macro_factor_pricing_engine = ["data/*.json"]
"macro_factor_pricing_engine.data" = ["*.json"]
